--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="row d-flex">
           <div class="col-12">
-            <div class="col-12 text-center">
+            <div class="col-12 mb-4 text-center">
               <a id="new-quote" class="btn">
                   New Word
               </a>
