--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
       .btn {
         transition: background-color .5s ease-in-out;
       }
+      
+      .btn {
+        font-size: 25px; 
+      }
 
       .quote,
       .author {
         transition: color .5s ease-in-out;
+        font-size: 100px;
       }
     </style>
   </head>
