--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <div id="quote-box" class="container">
-      <div class="sub-container offset-3 col-6">
+      <div class="sub-container col-12">
         <div id="text" class="row">
           <div class="offset-1 col-10 mt-4">
             <div class="text-center">
